--- a/.github/workflows/readme-stars.yml
+++ b/.github/workflows/readme-stars.yml
@@ -1,8 +1,8 @@
 name: Update README ⭐
 on:
-  # schedule:
-  #   - cron: "51 */4 * * *"  # Every 4 hours
-  workflow_dispatch:
+   schedule:
+     - cron: "51 */4 * * *"  # Every 4 hours
+   workflow_dispatch:
 
 jobs:
   update-readme:
